Nav Bar Z-Index fix

--- a/wp-content/themes/FoundationPress/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/modules/_navigation.scss
@@ -85,7 +85,7 @@
 #masthead {
   width: 100%;
   max-width: 100%!important;
-  z-index: 200;
+  z-index: 900;
 }
 .top-bar {
   height: 100px;
